--- a/src/global.less
+++ b/src/global.less
@@ -7,10 +7,15 @@ body,
 #root,
 .default-layout {
   height: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB',
+    'Microsoft YaHei', 'Helvetica Neue', Helvetica, Arial, sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol';
+  min-width: 1024px;
 }
 
 body {
   margin: 0;
+  min-height: 100vh;
 }
 
 // --- root
@@ -19,6 +24,8 @@ body {
   flex-direction: column;
   overflow: auto;
 }
+
+@box-shadow-layout: 0 2px 4px rgba(0, 0, 0, 0.05);
 
 .generate-pd-mg(18);
 
@@ -30,4 +37,13 @@ body {
     margin: (@i*1px);
   }
   .generate-pd-mg(@n, (@i + 1));
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+.flex-row {
+  display: flex;
+  flex-direction: row;
 }
