--- a/src/components/Problem/header.less
+++ b/src/components/Problem/header.less
@@ -1,6 +1,7 @@
 .header {
   padding: @space-base*2 @space-base*3;
   box-shadow: @box-shadow-base;
+  margin-bottom: @space-base*0.5;
   .headerTitle {
     font-size: @font-size-medium;
   }
