--- a/src/components/Problem/problemTabs.less
+++ b/src/components/Problem/problemTabs.less
@@ -22,6 +22,7 @@
   padding-bottom: 2px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.01), #fcfcfc);
+  min-width: 600px;
   & > .active {
     .tabButton::before,
     .tabButton::after {
