--- a/src/custom.less
+++ b/src/custom.less
@@ -20,3 +20,7 @@
 .ultra-shadow() {
   box-shadow: 0 5px 8px @shadow-color;
 }
+/*用于修正页面的codeeditor的样式问题*/
+.CodeMirror.CodeMirror-wrap {
+  height: calc(100vh - 260px) !important;
+}
