--- a/src/pages/problem/$id/_layout.less
+++ b/src/pages/problem/$id/_layout.less
@@ -24,4 +24,10 @@
   .codeContainer {
     .flex-column();
   }
+  .problemContainer {
+    justify-content: space-between;
+  }
+}
+.subrouterContainer {
+  flex: 1;
 }
