--- a/src/pages/problem/$id/_layout.less
+++ b/src/pages/problem/$id/_layout.less
@@ -14,9 +14,7 @@
   overflow: scroll;
 }
 .contentContainer {
-  display: flex;
-  flex-direction: row;
-  flex: 1;
+  overflow: scroll;
 }
 .contentContainer {
   .flex-row();
@@ -30,4 +28,6 @@
 }
 .subrouterContainer {
   flex: 1;
+  overflow: scroll;
+  display: block;
 }
