--- a/src/pages/problem/_layout.less
+++ b/src/pages/problem/_layout.less
@@ -2,6 +2,9 @@
   display: flex;
   flex: 1;
   flex-direction: row;
+  height: 100%;
+  max-height: 100%;
+  overflow: scroll;
   .ultra-container {
     flex: 1;
     display: flex;
