增加一个插件，用来增加 登录、注册、忘记密码

--- a/src/components/Problem/header.less
+++ b/src/components/Problem/header.less
@@ -18,8 +18,9 @@
   .headerLabel {
     font-size: @font-size-base;
     line-height: @font-size-base+8px;
-    @color: @text-color;
+    color: @text-color;
     text-align: center;
+    font-weight: 300;
   }
   .headerCounter {
     font-size: @font-size-base;
