--- a/src/global.less
+++ b/src/global.less
@@ -24,6 +24,9 @@ body {
   flex-direction: column;
   overflow: auto;
 }
+.ultra-header {
+  padding: @space-base @space-base*3!important;
+}
 
 @box-shadow-layout: 0 2px 4px rgba(0, 0, 0, 0.05);
 
