--- a/src/components/Comment/index.less
+++ b/src/components/Comment/index.less
@@ -9,5 +9,5 @@
   padding: @space-base;
 }
 .comment + .comment {
-  border-top: 1px solid @border-color-base;
+  border-top: 1px solid @border-color-fake;
 }
