修复safari中界面不适配的样式问题

--- a/src/components/CodeEditor/index.less
+++ b/src/components/CodeEditor/index.less
@@ -7,12 +7,10 @@
   align-items: center;
   padding-bottom: 2px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.01), #fcfcfc);
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.05), rgba(250, 250, 250, 1));
   padding: @font-size-base / 2 @space-base*2;
 }
 .languageSelector {
   min-width: 100px;
   margin-left: @font-size-base;
 }
-
-
