--- a/src/components/Problem/problemTabs.less
+++ b/src/components/Problem/problemTabs.less
@@ -21,7 +21,7 @@
 .functionRow {
   padding-bottom: 2px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.01), #fcfcfc);
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1), rgba(250, 250, 250, 1));
   min-width: 600px;
   & > .active {
     .tabButton::before,
