最大高度是个bug？

--- a/src/components/Markdown/Editor/index.less
+++ b/src/components/Markdown/Editor/index.less
@@ -8,6 +8,10 @@
     fill: currentColor;
     overflow: hidden;
   }
+  max-height: 100%;
+  .ant-card-body {
+    max-height: 100%;
+  }
 }
 
 .footerBar {
@@ -30,10 +34,10 @@
 }
 
 .previewer {
-  position: absolute;
-  top: 0;
-  left: 0;
   height: 100%;
   width: 100%;
+  min-height: 50px;
   text-align: left;
+  max-height: 100%;
+  overflow: scroll;
 }
