--- a/src/components/Markdown/markdown.css
+++ b/src/components/Markdown/markdown.css
@@ -2,6 +2,10 @@
   padding-left: 0.5em;
   font-size: 14px;
   text-align: left;
+  overflow: scroll;
+  max-height: 100%;
+  height: 100%;
+  z-index: inherit;
 }
 
 .markdown-section h1,
@@ -21,30 +25,33 @@ a.bf-link {
 
 .markdown-section h1 {
   font-size: 2.5em;
-  margin: 0 0 1em
+  margin: 0.6em 0;
 }
 
 .markdown-section h2 {
   font-size: 2em;
-  margin: 1.5em 0 .8em
+  margin: 0.5em 0;
 }
 
 .markdown-section h3 {
   font-size: 1.5em;
-  margin: 40px 0 .6em
+  margin: 0.4em 0;
+  /* margin: 1.25em 0 .6em */
 }
 
 .markdown-section h4 {
-  font-size: 1.25em
+  font-size: 1em;
+  margin: 0.3em 0;
 }
 
 .markdown-section h5 {
-  font-size: 1em
+  font-size: 1em;
+  margin: 0.2em 0;
 }
 
 .markdown-section h6 {
   color: #777;
-  font-size: 1em
+  font-size: 1em;
 }
 
 .markdown-section figure,
