--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,4 +1,3 @@
-
 .normal {
   font-family: Georgia, sans-serif;
   margin-top: 4em;
@@ -20,4 +19,9 @@
 
 .list code {
   background: #f7f7f7;
+}
+
+.markdownEditor {
+  width: 100%;
+  max-height: 440px;
 }
