--- a/src/global.less
+++ b/src/global.less
@@ -2,6 +2,7 @@
 @import '~antd/lib/style/themes/default.less';
 @import './components/less/index.less';
 @import './pages/problem/_layout.less';
+@import './pages/user/_layout.less';
 html,
 body,
 #root,
@@ -25,7 +26,8 @@ body {
   overflow: auto;
 }
 .ultra-header {
-  padding: @space-base @space-base*3!important;
+  // padding: @space-base @space-base*3!important;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
 }
 
 @box-shadow-layout: 0 2px 4px rgba(0, 0, 0, 0.05);
