--- a/src/global.less
+++ b/src/global.less
@@ -3,6 +3,7 @@
 @import './components/less/index.less';
 @import './pages/problem/_layout.less';
 @import './pages/user/_layout.less';
+@import './pages/stage/_layout.less';
 html,
 body,
 #root,
