--- a/src/components/Dynamic/dynamic.less
+++ b/src/components/Dynamic/dynamic.less
@@ -6,3 +6,357 @@
   line-height: @font-size-base*2;
   margin-bottom: @font-size-base;
 }
+
+.n-choice-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex: 1;
+  .n-choice-content {
+    // border-bottom: 1px dashed #ccc;
+    display: block;
+    min-width: 300px;
+    min-height: 1rem;
+  }
+  .n-choice-tool {
+    display: flex;
+    flex-direction: row;
+    button:first-child {
+      margin-left: 1rem;
+    }
+    button {
+      margin-right: 0.5rem;
+    }
+  }
+}
+
+.n-single-choice {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+.n-single-choice,
+.n-multi-choice {
+  padding-left: 1rem;
+  margin-left: 0.5rem;
+  margin-bottom: 1rem;
+  border: 1px solid transparent;
+  &.active {
+    border: 1px solid #eee;
+    border-radius: 0rem;
+  }
+}
+.ant-radio-group {
+  display: block !important;
+}
+
+.ant-radio-wrapper,
+.ant-checkbox-wrapper {
+  font-size: 1.2rem;
+  padding: 0 1rem !important;
+}
+
+.ant-radio-wrapper-checked,
+.ant-checkbox-wrapper-checked {
+  span {
+    color: @primary-color !important;
+  }
+}
+.n-readonly-choice {
+  align-items: center;
+  background: #fff;
+  color: rgba(0, 0, 0, 0.45);
+  padding: 0rem 0rem 1rem 0;
+  border: 1px solid #e8e8e8;
+  .n-answer-part {
+    padding: 1rem;
+    font-weight: bold;
+    font-size: 1.5rem;
+    .n-choice-answer {
+      padding-left: 1rem;
+    }
+  }
+  .n-single-choice,
+  .n-multi-choice {
+    margin-bottom: 0.5rem;
+  }
+  .ant-divider-horizontal.ant-divider-with-text-left::before {
+    width: 2%;
+  }
+  .n-choice-content {
+    font-size: 1.2rem;
+    padding: 1rem 2rem;
+  }
+  .n-choice-part-container {
+    .n-choice-content {
+      font-size: 1rem;
+      padding: 0.5rem 1rem;
+    }
+  }
+  & .n-choice-options {
+    font-size: 1rem;
+    line-height: 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding: 1rem;
+    width: 100%;
+    background-color: #fafafa;
+    color: rgba(0, 0, 0, 0.45);
+    border-bottom: 1px solid #e8e8e8;
+    span.item {
+      margin-right: 2rem;
+    }
+  }
+}
+
+.markdown-section {
+  padding-left: 0.5rem;
+}
+
+.markdown-section h1,
+.markdown-section h2,
+.markdown-section h3,
+.markdown-section h4,
+.markdown-section strong {
+  color: #2c3e50;
+  font-weight: 600;
+}
+
+.markdown-section a,
+a.bf-link {
+  color: var(--theme-color, #42b983);
+  font-weight: 600;
+}
+
+.markdown-section h1 {
+  font-size: 2rem;
+  margin: 0 0 1rem;
+}
+
+.markdown-section h2 {
+  font-size: 1.75rem;
+  margin: 1.5rem 0 0.8rem;
+}
+
+.markdown-section h3 {
+  font-size: 1.5rem;
+  margin: 40px 0 0.6rem;
+}
+
+.markdown-section h4 {
+  font-size: 1.25rem;
+}
+
+.markdown-section h5 {
+  font-size: 1rem;
+}
+
+.markdown-section h6 {
+  color: #777;
+  font-size: 1rem;
+}
+
+.markdown-section figure,
+.markdown-section p {
+  margin: 1.2em 0;
+}
+
+.markdown-section ol,
+.markdown-section p,
+.markdown-section ul {
+  line-height: 1.6rem;
+  word-spacing: 0.05rem;
+}
+
+.markdown-section ol,
+.markdown-section ul {
+  padding-left: 1.5rem;
+}
+
+.markdown-section blockquote {
+  border-left: 4px solid var(--theme-color, #42b983);
+  color: #999;
+  margin: 2rem 0;
+  padding: 1rem;
+  background-color: #f8f8f8;
+  font-style: italic;
+  font-size: 1rem;
+}
+
+.markdown-section blockquote p {
+  font-weight: 600;
+  margin-left: 0;
+}
+
+.markdown-section iframe {
+  margin: 1em 0;
+}
+
+.markdown-section em {
+  color: #7f8c8d;
+}
+
+.markdown-section code {
+  border-radius: 2px;
+  color: #e96900;
+  font-size: 0.8rem;
+  margin: 0 2px;
+  padding: 3px 5px;
+  white-space: pre-wrap;
+}
+
+.markdown-section code,
+.markdown-section pre {
+  background-color: #f8f8f8;
+  font-family: Roboto Mono, Monaco, courier, monospace;
+}
+
+.markdown-section pre {
+  -moz-osx-font-smoothing: initial;
+  -webkit-font-smoothing: initial;
+  line-height: 1.5rem;
+  margin: 1.2em 0;
+  overflow: auto;
+  padding: 0 1.4rem;
+  position: relative;
+  word-wrap: normal;
+}
+
+.token.cdata,
+.token.comment,
+.token.doctype,
+.token.prolog {
+  color: #8e908c;
+}
+
+.token.namespace {
+  opacity: 0.7;
+}
+
+.token.boolean,
+.token.number {
+  color: #c76b29;
+}
+
+.token.punctuation {
+  color: #525252;
+}
+
+.token.property {
+  color: #c08b30;
+}
+
+.token.tag {
+  color: #2973b7;
+}
+
+.token.string {
+  color: var(--theme-color, #42b983);
+}
+
+.token.selector {
+  color: #6679cc;
+}
+
+.token.attr-name {
+  color: #2973b7;
+}
+
+.language-css .token.string,
+.style .token.string,
+.token.entity,
+.token.url {
+  color: #22a2c9;
+}
+
+.token.attr-value,
+.token.control,
+.token.directive,
+.token.unit {
+  color: var(--theme-color, #42b983);
+}
+
+.token.function,
+.token.keyword {
+  color: #e96900;
+}
+
+.token.atrule,
+.token.regex,
+.token.statement {
+  color: #22a2c9;
+}
+
+.token.placeholder,
+.token.variable {
+  color: #3d8fd1;
+}
+
+.token.deleted {
+  text-decoration: line-through;
+}
+
+.token.inserted {
+  border-bottom: 1px dotted #202746;
+  text-decoration: none;
+}
+
+.token.italic {
+  font-style: italic;
+}
+
+.token.bold,
+.token.important {
+  font-weight: 700;
+}
+
+.token.important {
+  color: #c94922;
+}
+
+.token.entity {
+  cursor: help;
+}
+
+.markdown-section pre > code {
+  -moz-osx-font-smoothing: initial;
+  -webkit-font-smoothing: initial;
+  background-color: #f8f8f8;
+  border-radius: 2px;
+  color: #525252;
+  display: block;
+  font-family: Roboto Mono, Monaco, courier, monospace;
+  font-size: 0.8rem;
+  line-height: inherit;
+  margin: 0 2px;
+  max-width: inherit;
+  overflow: inherit;
+  padding: 2.2em 5px;
+  white-space: inherit;
+}
+
+.markdown-section code:after,
+.markdown-section code:before {
+  letter-spacing: 0.05rem;
+}
+
+code .token {
+  -moz-osx-font-smoothing: initial;
+  -webkit-font-smoothing: initial;
+  min-height: 1.5rem;
+}
+
+pre:after {
+  color: #ccc;
+  content: attr(data-lang);
+  font-size: 0.6rem;
+  font-weight: 600;
+  height: 15px;
+  line-height: 15px;
+  padding: 5px 10px 0;
+  position: absolute;
+  right: 0;
+  text-align: right;
+  top: 0;
+}
