--- a/src/pages/user/_layout.less
+++ b/src/pages/user/_layout.less
@@ -38,8 +38,10 @@
     flex: 1;
     width: 100%;
     height: calc(100vh - @font-size-base*3);
+    overflow: hidden;
     aside {
       height: 100%;
+      max-height: 100%;
       background: #fff;
       .ant-menu-inline,
       .ant-menu-vertical,
@@ -55,6 +57,9 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        max-height: 100%;
+        height: 100%;
+        overflow: auto;
       }
       background: #fff;
       // padding: 1rem 2rem 0 2rem;
